test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_parse/plx1_prefix_subscript.plx
pub fn main(none) i32 {
    arr: [3]i32 = $(0, 1, 2)
    return [0]arr
}
